add Vast3 tracking events : acceptInvitationLinear, exitFullscreen, progress fix vast2 tracking events : pause,rewind add functional tests

--- a/samples/adsTestsPlayer/index.html
+++ b/samples/adsTestsPlayer/index.html
@@ -465,7 +465,7 @@
 </body>
 
 <!-- sources -->
-<script src="../../dist/adsplayer.js"></script>
+<script src="../../dist/csadsplugin.js"></script>
 <!-- endsources -->
 
 <!--  <script src="../../../cswebplayer/dist/cswebplayer.js"></script> -->
