use hasplayer.min.js, move adsDuration config param into trackingEvents params

--- a/samples/adsTestsPlayer/index.html
+++ b/samples/adsTestsPlayer/index.html
@@ -469,7 +469,7 @@
 <!-- endsources -->
 
 <!--  <script src="../../../cswebplayer/dist/cswebplayer.js"></script> -->
-<script type="text/javascript" src="../cswebplayer.js"></script>
+<script type="text/javascript" src="../hasplayer.min.js"></script>
 
 <!-- build:js player.js-->
 <script src="HasCastReceiver.js"></script>
