Use CSAdsPlugin events instead of timeout to detect that a new ad is played

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -13,13 +13,33 @@
             <div id="adsplayer-container" width="700" height="300" controls> </div>
         </div>
         <div>
+            <br>
             <input id="stream_toplay" type="text" size="100"> </input><br>
             <input id="ad_toplay" type="text" size="100"> </input><br>
+            <br>
             <button id="play_button" >Play</button>
             <button id="stop_button" >Stop</button><br>
-            start/end event <input id="event_started" type="checkbox"> </input>
-            add/remove event <input id="event_added" type="checkbox"> </input>
-            play/pause event <input id="event_play" type="checkbox"> </input>
+            <h4>CSAdsPlugin Events</h4>
+            <table>
+                <tr>
+                    <td>start  </td>
+                    <td><input id="event_start" type="number" value="0" style="width:30px" disabled> </input></td>
+                    <td>stop  </td>
+                    <td><input id="event_end" type="number" value="0" style="width:30px" disabled> </input></td>
+                </tr>
+                <tr>
+                    <td>add  </td>
+                    <td><input id="event_add" type="number" value="0" style="width:30px" disabled> </input></td>
+                    <td>remove  </td>
+                    <td><input id="event_remove" type="number" value="0" style="width:30px" disabled> </input></td>
+                </tr>
+                <tr>
+                    <td>play  </td>
+                    <td><input id="event_play" type="number" value="0" style="width:30px" disabled> </input></td>
+                    <td>pause  </td>
+                    <td><input id="event_pause" type="number" value="0" style="width:30px" disabled> </input></td>
+                </tr>
+            </table>
         </div>
 
         <script>
@@ -31,33 +51,37 @@
 
                 adsPlugin = new adsplayer.AdsPlayer(document.getElementById('adsplayer-container'));
 
-                // hide the video player and update the checkbox when an ad starts
+                // hide the video player and update the number of start event
                 adsPlugin.addEventListener('start', function(e) {
                     document.getElementById('videoplayer-container').style.display = 'none' ;
-                    document.getElementById('event_started').checked = true;
+                    document.getElementById('event_start').value++;
                 });
 
-                // show the video player and update the checkbox at the end of the ad
+                // show the video player and update the number of end event
+                // reset the add/remove, play/pause events
                 adsPlugin.addEventListener('end', function(e) {
                     document.getElementById('videoplayer-container').style.display = 'block';
-                    document.getElementById('event_started').checked = false;
+                    document.getElementById('event_end').value++;
+                    document.getElementById('event_add').value = "0";
+                    document.getElementById('event_remove').value = "0";
+                    document.getElementById('event_play').value = "0";
+                    document.getElementById('event_pause').value = "0";
                 });
 
                 adsPlugin.addEventListener('addElement', function(e) {
-                    document.getElementById('event_added').checked = true;
+                    document.getElementById('event_add').value++;
                 });
 
                 adsPlugin.addEventListener('removeElement', function(e) {
-                    //document.getElementById('videoplayer-container').currentTime = 0;
-                    document.getElementById('event_added').checked = false;
+                    document.getElementById('event_remove').value++;
                 });
 
                 adsPlugin.addEventListener('play', function(e) {
-                    document.getElementById('event_play').checked = true;
+                    document.getElementById('event_play').value++;
                 });
 
                 adsPlugin.addEventListener('pause', function(e) {
-                    document.getElementById('event_play').checked = false;
+                    document.getElementById('event_pause').value++;
                 });
 
                 mediaPlayer = new MediaPlayer();
@@ -84,6 +108,8 @@
             // stop button
             document.querySelector('#stop_button').addEventListener("click",function(e) {
                 mediaPlayer.stop();
+                document.getElementById('event_start').value = "0";
+                document.getElementById('event_end').value = "0";
             });
 
 
