Deliver in dist directory all content of samples directory.

--- a/samples/adsTestsPlayer/index.html
+++ b/samples/adsTestsPlayer/index.html
@@ -464,10 +464,11 @@
 </div>
 </body>
 
-<!-- sources -->
+
+<!-- sources modify by gulp.replaceSourcesByBuild -->
 <script src="../../dist/csadsplugin.js"></script>
 <!-- endsources -->
-
+        
 <!--  <script src="../../../cswebplayer/dist/cswebplayer.js"></script> -->
 <script type="text/javascript" src="../hasplayer.min.js"></script>
 
