--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
     <head>
         <!-- sources under test-->
+        
+        <!-- sources modify by gulp.replaceSourcesByBuild -->
         <script src="../../dist/csadsplugin.js"></script>
+        <!-- endsources -->
+        
         <!-- uses cswebplayer-->
         <script src="../hasplayer.min.js"></script>
 
