--- a/samples/voAdsPlayer/index.html
+++ b/samples/voAdsPlayer/index.html
@@ -9,7 +9,10 @@
 <link rel="stylesheet" type="text/css" href="css/tables.css" />
 
 <script type="text/javascript" src="../hasplayer.min.js"></script>
+
+<!-- sources modify by gulp.replaceSourcesByBuild -->
 <script type="text/javascript" src="../../dist/csadsplugin.js"></script>
+<!-- endsources -->
 
 <script type="text/javascript" src="json/config.json"></script>
 <script type="text/javascript" src="js/streamSelector.js"></script>
