--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -11,11 +11,11 @@
         <script src="../hasplayer.min.js"></script>
 
         <style>
-            .tracking_events, .event {
+            .events_list, .event {
                 display: flex;
             }
 
-            .tracking_events {
+            .events_list {
                 flex-wrap: wrap;
                 width: 700px;
                 margin-bottom: 10px;
@@ -49,7 +49,7 @@
             <button id="play_button" >Play</button>
             <button id="stop_button" >Stop</button><br>
             <h4>CSAdsPlugin Events</h4>
-            <div class="tracking_events">
+            <div class="events_list">
                 <div class="event">
                     <div class="event_title">start</div>
                     <input id="event_start" type="number" value="0" disabled> </input>
@@ -76,83 +76,84 @@
                 </div>
             </div>
             <button id="clearEvents_button" >Clear all</button><br>
+
             <h4>Tracking Events</h4>
-            <div class="tracking_events">
+            <div id="tracking_events" class="events_list">
                 <div class="event">
                     <div class="event_title">creativeView</div>
-                    <input id="te_creativeView" type="number" value="0" disabled> </input>
+                    <input id="te_creativeView" eventId="creativeView" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">start</div>
-                    <input id="te_start" type="number" value="0" disabled> </input>
+                    <input id="te_start" eventId="start" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">firstQuartile</div>
-                    <input id="te_firstQuartile" type="number" value="0" disabled> </input>
+                    <input id="te_firstQuartile" eventId="firstQuartile" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">midpoint</div>
-                    <input id="te_midpoint" type="number" value="0" disabled> </input>
+                    <input id="te_midpoint" eventId="midpoint" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">thirdQuartile</div>
-                    <input id="te_thirdQuartile" type="number" value="0" disabled> </input>
+                    <input id="te_thirdQuartile" eventId="thirdQuartile" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">complete</div>
-                    <input id="te_complete" type="number" value="0" disabled> </input>
+                    <input id="te_complete" eventId="complete" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">mute</div>
-                    <input id="te_mute" type="number" value="0" disabled> </input>
+                    <input id="te_mute" eventId="mute" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">unmute</div>
-                    <input id="te_unmute" type="number" value="0" disabled> </input>
+                    <input id="te_unmute" eventId="unmute" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">pause</div>
-                    <input id="te_pause" type="number" value="0" disabled> </input>
+                    <input id="te_pause" eventId="pause" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">rewind</div>
-                    <input id="te_rewind" type="number" value="0" disabled> </input>
+                    <input id="te_rewind" eventId="rewind" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">resume</div>
-                    <input id="te_resume" type="number" value="0" disabled> </input>
+                    <input id="te_resume" eventId="resume" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">fullscreen</div>
-                    <input id="te_fullscreen" type="number" value="0" disabled> </input>
+                    <input id="te_fullscreen" eventId="fullscreen" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">exitFullscreen</div>
-                    <input id="te_exitFullscreen" type="number" value="0" disabled> </input>
+                    <input id="te_exitFullscreen" eventId="exitFullscreen" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">expand</div>
-                    <input id="te_expand" type="number" value="0" disabled> </input>
+                    <input id="te_expand" eventId="expand" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">collapse</div>
-                    <input id="te_collapse" type="number" value="0" disabled> </input>
+                    <input id="te_collapse" eventId="collapse" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">acceptInvitationLinear</div>
-                    <input id="te_acceptInvitationLinear" type="number" value="0" disabled> </input>
+                    <input id="te_acceptInvitationLinear" eventId="acceptInvitationLinear" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">closeLinear</div>
-                    <input id="te_closeLinear" type="number" value="0" disabled> </input>
+                    <input id="te_closeLinear" eventId="closeLinear" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">skip</div>
-                    <input id="te_skip" type="number" value="0" disabled> </input>
+                    <input id="te_skip" eventId="skip" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">progress</div>
-                    <input id="te_progress" type="number" value="0" disabled> </input>
+                    <input id="te_progress" eventId="progress" type="number" value="0" disabled> </input>
                 </div>
             </div>
             <button id="clear_te_button" >Clear all</button>
@@ -171,29 +172,35 @@
                 // hide the video player and update the number of start event
                 adsPlugin.addEventListener('start', function(e) {
                     document.getElementById('videoplayer-container').style.display = 'none' ;
-                    document.getElementById('event_start').value++;
+                    var element = document.getElementById('event_start');
+                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
                 });
 
                 // show the video player and update the number of end event
                 adsPlugin.addEventListener('end', function(e) {
                     document.getElementById('videoplayer-container').style.display = 'block';
-                    document.getElementById('event_end').value++;
+                    var element = document.getElementById('event_end');
+                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
                 });
 
                 adsPlugin.addEventListener('addElement', function(e) {
-                    document.getElementById('event_add').value++;
+                    var element = document.getElementById('event_add');
+                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
                 });
 
                 adsPlugin.addEventListener('removeElement', function(e) {
-                    document.getElementById('event_remove').value++;
+                    var element = document.getElementById('event_remove');
+                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
                 });
 
                 adsPlugin.addEventListener('play', function(e) {
-                    document.getElementById('event_play').value++;
+                    var element = document.getElementById('event_play');
+                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
                 });
 
                 adsPlugin.addEventListener('pause', function(e) {
-                    document.getElementById('event_pause').value++;
+                    var element = document.getElementById('event_pause');
+                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
                 });
 
                 mediaPlayer = new MediaPlayer();
@@ -224,12 +231,12 @@
 
             // clear events button
             document.querySelector('#clearEvents_button').addEventListener("click",function(e) {
-                document.getElementById('event_start').value = "0";
-                document.getElementById('event_end').value = "0";
-                document.getElementById('event_add').value = "0";
-                document.getElementById('event_remove').value = "0";
-                document.getElementById('event_play').value = "0";
-                document.getElementById('event_pause').value = "0";
+                document.getElementById('event_start').setAttribute("value", 0);
+                document.getElementById('event_end').setAttribute("value", 0);
+                document.getElementById('event_add').setAttribute("value", 0);
+                document.getElementById('event_remove').setAttribute("value", 0);
+                document.getElementById('event_play').setAttribute("value", 0);
+                document.getElementById('event_pause').setAttribute("value", 0);
             });
 
             /** TRACKING EVENTS **/
@@ -266,7 +273,7 @@
                         var element = document.querySelector('#te_' + newEvent[1]);
                         if (element) {
                             // Increment event counter
-                            element.value++;
+                            element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
                         }
                     }
                 }
@@ -295,10 +302,10 @@
             // "Clear all" button
             document.querySelector('#clear_te_button').addEventListener("click",function(e) {
                 // Get tracking event input elements
-                var inputs = document.querySelectorAll(".tracking_events .event input");
+                var inputs = document.querySelectorAll("#tracking_events .event input");
                 for (var i = 0; i < inputs.length; i++) {
                     // Reset input value
-                    inputs[i].value = 0;
+                    inputs[i].setAttribute("value", 0);
                 }
             });
         </script>
