--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -1,10 +1,44 @@
+<!--
+/*
+ * The copyright in this software module is being made available under the BSD License, included
+ * below. This software module may be subject to other third party and/or contributor rights,
+ * including patent rights, and no such rights are granted under this license.
+ *
+ * Copyright (C) 2016 VIACCESS S.A and/or ORCA Interactive
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without modification, are permitted
+ * provided that the following conditions are met:
+ * - Redistributions of source code must retain the above copyright notice, this list of conditions
+ *   and the following disclaimer.
+ * - Redistributions in binary form must reproduce the above copyright notice, this list of
+ *   conditions and the following disclaimer in the documentation and/or other materials provided
+ *   with the distribution.
+ * - Neither the name of Orange nor the names of its contributors may be used to endorse or promote
+ *   products derived from this software module without specific prior written permission.
+ *
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS “AS IS” AND ANY EXPRESS OR
+ * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
+ * FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER O
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+ * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY
+ * WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- sources under test-->
-        <script src="../../dist/csadsplugin.js"></script>
-        <!-- uses cswebplayer-->
-        <script src="../hasplayer.min.js"></script>
+        <script src="../../dist/csadsplugin.js"></script>   <!-- sources under test-->
+        <script src="../hasplayer.min.js"></script>         <!-- uses hasplayer-->
+
+        <script src="adsPluginEvtsHdler.js"></script>
+        <script src="buttonsHdler.js"></script>
+        <script src="trackingEvtsHdler.js"></script>
+        <script src="html5VideoEvtsHdler.js"></script>
 
         <style>
             .events_list, .event {
@@ -35,7 +69,7 @@
     <body>
         <div id="container" style="min-height: 300px">
             <video id="videoplayer-container" width="700" height="300" controls>  </video>
-            <div id="adsplayer-container" width="700" height="300" controls> </div>
+            <div id="adsplayer-container" width="700" height="300"> </div>
         </div>
         <div>
             <br>
@@ -44,8 +78,81 @@
             <br>
             <button id="play_button" >Play</button>
             <button id="pause_button" >Pause</button>
-            <button id="stop_button" >Stop</button><br>
+            <button id="stop_button" >Stop</button>
+            <button id="mute_button" >Mute</button><br>
+
+            <h4>HTML5 video Events</h4>
+
+            <div class="events_list">
+                <div class="event">
+                    <div class="event_title">loadstart</div>
+                    <input id="event_html5_loadstart" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">emptied</div>
+                    <input id="event_html5_emptied" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">canalplaythrough</div>
+                    <input id="event_html5_canalplaythrough" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">ended</div>
+                    <input id="event_html5_ended" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">ratechange</div>
+                    <input id="event_html5_ratechange" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">progress</div>
+                    <input id="event_html5_progress" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">stalled</div>
+                    <input id="event_html5_stalled" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">playing</div>
+                    <input id="event_html5_playing" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">durationchange</div>
+                    <input id="event_html5_durationchange" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">resize</div>
+                    <input id="event_html5_resize" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">suspend</div>
+                    <input id="event_html5_suspend" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">loadedmetadata</div>
+                    <input id="event_html5_loadedmetadata" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">waiting</div>
+                    <input id="event_html5_waiting" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">timeupdate</div>
+                    <input id="event_html5_timeupdate" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">volumechange</div>
+                    <input id="event_html5_volumechange" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">abort</div>
+                    <input id="event_html5_abort" type="number" value="0" disabled> </input>
+                </div>
+            </div>
+            <button id="clear_event_html5_button" >Clear all</button><br>
+
             <h4>CSAdsPlugin Events</h4>
+
             <div class="events_list">
                 <div class="event">
                     <div class="event_title">start</div>
@@ -75,6 +182,7 @@
             <button id="clearEvents_button" >Clear all</button><br>
 
             <h4>Tracking Events</h4>
+
             <div id="tracking_events" class="events_list">
                 <div class="event">
                     <div class="event_title">creativeView</div>
@@ -160,74 +268,13 @@
         <script>
 
             var mediaPlayer = null;
-            var adPlayer = null;
             var adsPlugin = null;
-
-            var onMainVideoPause = function(e) {
-                if (document.querySelector('#pause_button').innerHTML == "Pause") {
-                    mediaPlayer.pause();
-                    document.querySelector('#pause_button').innerHTML = "Resume";
-                } else {
-                    mediaPlayer.play();
-                    document.querySelector('#pause_button').innerHTML = "Pause";
-                }
-            }
-
-            var onAdPause = function(e) {
-                if (document.querySelector('#pause_button').innerHTML == "Pause") {
-                    adPlayer.pause();
-                    document.querySelector('#pause_button').innerHTML = "Resume";
-                } else {
-                    adPlayer.play();
-                    document.querySelector('#pause_button').innerHTML = "Pause";
-                }
-            }
 
             document.addEventListener("DOMContentLoaded", function(event){
 
                 adsPlugin = new adsplayer.AdsPlayer(document.getElementById('adsplayer-container'));
 
-                // hide the video player and update the number of start event
-                adsPlugin.addEventListener('start', function(e) {
-                    document.getElementById('videoplayer-container').style.display = 'none' ;
-                    var element = document.getElementById('event_start');
-                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
-                });
-
-                // show the video player and update the number of end event
-                adsPlugin.addEventListener('end', function(e) {
-                    document.getElementById('videoplayer-container').style.display = 'block';
-                    var element = document.getElementById('event_end');
-                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
-                });
-
-                adsPlugin.addEventListener('addElement', function(e) {
-                    var element = document.getElementById('event_add');
-                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
-                    // Store the adPlayer element
-                    adPlayer = e.data.element;
-                    // Change the listener for the pause button
-                    document.querySelector('#pause_button').removeEventListener("click", onMainVideoPause);
-                    document.querySelector('#pause_button').addEventListener("click", onAdPause);
-                });
-
-                adsPlugin.addEventListener('removeElement', function(e) {
-                    var element = document.getElementById('event_remove');
-                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
-                    // Change the listener for the pause button
-                    document.querySelector('#pause_button').removeEventListener("click", onAdPause);
-                    document.querySelector('#pause_button').addEventListener("click", onMainVideoPause);
-                });
-
-                adsPlugin.addEventListener('play', function(e) {
-                    var element = document.getElementById('event_play');
-                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
-                });
-
-                adsPlugin.addEventListener('pause', function(e) {
-                    var element = document.getElementById('event_pause');
-                    element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
-                });
+                initAdsPluginEvtsHdler(adsPlugin);
 
                 mediaPlayer = new MediaPlayer();
 
@@ -237,105 +284,15 @@
 
                 mediaPlayer.addPlugin(adsPlugin);
 
-                // play button
-                document.querySelector('#play_button').addEventListener("click",function(e) {
-                    var stream = {
-                        url : document.getElementById("stream_toplay").value,
-                        protData : null,
-                        adsUrl : document.getElementById("ad_toplay").value
-                    };
+                initButtonsHdler();
 
-                    mediaPlayer.load(stream);
-                });
+                trackingEvtsHdler();
 
-                // stop button
-                document.querySelector('#stop_button').addEventListener("click",function(e) {
-                    mediaPlayer.stop();
-                });
+                initHtml5VideoEvtsHdler();
 
-                // pause button
-                document.querySelector('#pause_button').addEventListener("click", onMainVideoPause);
 
-                // clear events button
-            	document.querySelector('#clearEvents_button').addEventListener("click",function(e) {
-	                document.getElementById('event_start').setAttribute("value", 0);
-	                document.getElementById('event_end').setAttribute("value", 0);
-	                document.getElementById('event_add').setAttribute("value", 0);
-	                document.getElementById('event_remove').setAttribute("value", 0);
-	                document.getElementById('event_play').setAttribute("value", 0);
-	                document.getElementById('event_pause').setAttribute("value", 0);
-            	});
             });
 
-            /** TRACKING EVENTS **/
-
-            var s_ajaxListener = new Object();
-
-            // Added for IE support
-            if (typeof XMLHttpRequest === "undefined") {
-                XMLHttpRequest = function () {
-                    try { return new ActiveXObject("Msxml2.XMLHTTP.6.0"); }
-                    catch (e) {}
-                    try { return new ActiveXObject("Msxml2.XMLHTTP.3.0"); }
-                    catch (e) {}
-                    try { return new ActiveXObject("Microsoft.XMLHTTP"); }
-                    catch (e) {}
-                    throw new Error("This browser does not support XMLHttpRequest.");
-                };
-            }
-
-            s_ajaxListener.tempOpen = XMLHttpRequest.prototype.open;
-            s_ajaxListener.tempSend = XMLHttpRequest.prototype.send;
-
-            // Callback for XHR
-            s_ajaxListener.callback = function () {
-                // this.method: the ajax method used
-                // this.url   : the url of the requested script (including query string, if any) (urlencoded)
-                // this.data  : the data sent, if any ex: foo=bar&a=b (urlencoded)
-                if (this.url.indexOf("http://cswebplayer.viaccess.fr/adsserver/js?event=")!=-1) {
-                    // Get event name from URL
-                    var newEvent = this.data.split("=");
-                    if (newEvent &&
-                        newEvent.length > 1) {
-                        // Get input element from DOM
-                        var element = document.querySelector('#te_' + newEvent[1]);
-                        if (element) {
-                            // Increment event counter
-                            element.setAttribute("value", parseInt(element.getAttribute("value")) + 1);
-                        }
-                    }
-                }
-            }
-
-            XMLHttpRequest.prototype.open = function(a,b) {
-                if (!a) var a='';
-                if (!b) var b='';
-                s_ajaxListener.tempOpen.apply(this, arguments);
-                s_ajaxListener.method = a;
-                s_ajaxListener.url = b;
-                if (a.toLowerCase() == 'get') {
-                    s_ajaxListener.data = b.split('?');
-                    s_ajaxListener.data = s_ajaxListener.data[1];
-                }
-            }
-
-            XMLHttpRequest.prototype.send = function(a,b) {
-                if (!a) var a='';
-                if (!b) var b='';
-                s_ajaxListener.tempSend.apply(this, arguments);
-                if(s_ajaxListener.method.toLowerCase() == 'post')s_ajaxListener.data = a;
-                s_ajaxListener.callback();
-            }
-
-            // "Clear all" button
-            document.querySelector('#clear_te_button').addEventListener("click",function(e) {
-                // Get tracking event input elements
-                var inputs = document.querySelectorAll("#tracking_events .event input");
-                for (var i = 0; i < inputs.length; i++) {
-                    // Reset input value
-                    inputs[i].setAttribute("value", 0);
-                }
-            });
         </script>
     </body>
 </html>
