update the html5 video list of events

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -148,6 +148,34 @@
                     <div class="event_title">abort</div>
                     <input id="event_html5_abort" type="number" value="0" disabled> </input>
                 </div>
+                <div class="event">
+                    <div class="event_title">loadeddata</div>
+                    <input id="event_html5_loadeddata" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">seeking</div>
+                    <input id="event_html5_seeking" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">play</div>
+                    <input id="event_html5_play" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">error</div>
+                    <input id="event_html5_error" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">canplay</div>
+                    <input id="event_html5_canplay" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">seeked</div>
+                    <input id="event_html5_seeked" type="number" value="0" disabled> </input>
+                </div>
+                <div class="event">
+                    <div class="event_title">pause</div>
+                    <input id="event_html5_pause" type="number" value="0" disabled> </input>
+                </div>
             </div>
             <button id="clear_event_html5_button" >Clear all</button><br>
 
