WARNING: some comments are necessary in index.html, Don't remove them.

--- a/samples/adsTestsPlayer/index.html
+++ b/samples/adsTestsPlayer/index.html
@@ -466,7 +466,9 @@
 
 
 <!-- sources modify by gulp.replaceSourcesByBuild -->
+<!-- !!! DO NOT REMOVE OR CHANGE THE COMMENTS LINE ABOVE !!! -->
 <script src="../../dist/csadsplugin.js"></script>
+<!-- !!! DO NOT REMOVE OR CHANGE THE COMMENT LINE BELOW!!! -->
 <!-- endsources -->
         
 <!--  <script src="../../../cswebplayer/dist/cswebplayer.js"></script> -->
