--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
     <head>
         <!-- sources under test-->
+
+        <!-- sources modify by gulp.replaceSourcesByBuild -->
+        <!-- !!! DO NOT REMOVE OR CHANGE THE COMMENTS LINE ABOVE !!! -->
         <script src="../../dist/csadsplugin.js"></script>
+        <!-- !!! DO NOT REMOVE OR CHANGE THE COMMENT LINE BELOW!!! -->
+        <!-- endsources -->
+
         <!-- uses cswebplayer-->
         <script src="../hasplayer.min.js"></script>
 
