--- a/samples/voAdsPlayer/index.html
+++ b/samples/voAdsPlayer/index.html
@@ -11,7 +11,9 @@
 <script type="text/javascript" src="../hasplayer.min.js"></script>
 
 <!-- sources modify by gulp.replaceSourcesByBuild -->
+<!-- !!! DO NOT REMOVE OR CHANGE THE COMMENTS LINE ABOVE !!! -->
 <script type="text/javascript" src="../../dist/csadsplugin.js"></script>
+<!-- !!! DO NOT REMOVE OR CHANGE THE COMMENT LINE BELOW!!! -->
 <!-- endsources -->
 
 <script type="text/javascript" src="json/config.json"></script>
