CSWP-143: CSAdsPlugin events tests

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -189,30 +189,30 @@
 
             <h4>CSAdsPlugin Events</h4>
 
-            <div class="events_list">
+            <div id="csadsplugin_events" class="events_list">
                 <div class="event">
                     <div class="event_title">start</div>
-                    <input id="event_start" type="number" value="0" disabled> </input>
+                    <input id="event_start" eventId="start" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">stop</div>
-                    <input id="event_end" type="number" value="0" disabled> </input>
+                    <input id="event_end" eventId="end" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">add</div>
-                    <input id="event_add" type="number" value="0" disabled> </input>
+                    <input id="event_add" eventId="add" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">remove</div>
-                    <input id="event_remove" type="number" value="0" disabled> </input>
+                    <input id="event_remove" eventId="remove" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">play</div>
-                    <input id="event_play" type="number" value="0" disabled> </input>
+                    <input id="event_play" eventId="play" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">pause</div>
-                    <input id="event_pause" type="number" value="0" disabled> </input>
+                    <input id="event_pause" eventId="pause" type="number" value="0" disabled> </input>
                 </div>
             </div>
             <button id="clearEvents_button" >Clear all</button><br>
