Add a check on the parameters of the add event

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -71,6 +71,10 @@
             .event input {
                 width: 30px;
             }
+
+            .event .input-text {
+                width: 100px;
+            }
         </style>
     </head>
 
@@ -201,6 +205,8 @@
                 <div class="event">
                     <div class="event_title">add</div>
                     <input id="event_add" eventId="add" type="number" value="0" disabled> </input>
+                    <input class="input-text" id="ad_dom_id" type="text" size="100" value="" disabled> </input>
+                    <input class="input-text" id="ad_dom_type" type="text" size="100" value="" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">remove</div>
@@ -266,7 +272,7 @@
                 </div>
                 <div class="event">
                     <div class="event_title">fullscreen</div>
-                    <input id="te_fullscreen" eventId="fullscreen" type="number" value="0" disabled> </input>
+                    <input id="te_fullscrhttp://localhost/csadsplugin/samples/testsPlayer/een" eventId="fullscreen" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">exitFullscreen</div>
